--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,25 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.8)
 
-project(verilog-parser)
+project(verilog-parser VERSION 1.0 LANGUAGES C)
 
-enable_testing()
+option(VLOG_PARSER_BUILD_DOCS "Build documents." OFF)
+option(VLOG_PARSER_BUILD_TEST "Build test." OFF)
 
 add_subdirectory(./src)
-add_subdirectory(./docs)
 
-add_custom_target(verilogparser-test
+if(${VLOG_PARSER_BUILD_DOCS})
+  add_subdirectory(./docs)
+endif()
+
+if(${VLOG_PARSER_BUILD_TEST}) 
+  enable_testing()
+
+  add_custom_target(verilogparser-test
     COMMAND ./bin/run-tests.sh
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
     DEPENDS ${EXECUTABLE_NAME}
     COMMENT "Running Test Suite"
     VERBATIM
-)
+  )
+
+endif()
