--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 message(STATUS "Build Type: ${CMAKE_BUILD_TYPE}")
 
-set(LIBRARY_NAME    verilogparser)
+#set(LIBRARY_NAME    verilogparser)
 set(EXECUTABLE_NAME parser)
 
 FIND_PACKAGE(BISON 3.0.4 REQUIRED)
