--- a/cmake/config.cmake.in
+++ b/cmake/config.cmake.in
@@ -8,7 +8,7 @@ find_package_handle_standard_args(@PROJECT_NAME@ CONFIG_MODE)
 
 if(NOT TARGET @PROJECT_NAME@::@VLOG_PARSER_TARGET_NAME@) 
 
-  include("${CMAKE_CURRENT_LIST_DIR)/@VLOG_PARSER_TARGETS_EXPORT_NAME@.cmake")
+  include("${CMAKE_CURRENT_LIST_DIR}/@VLOG_PARSER_TARGETS_EXPORT_NAME@.cmake")
 
   if((NOT TARGET @VLOG_PARSER_TARGET_NAME@) AND 
      (NOT @PROJECT_NAME@_FIND_VERSION OR @PROJECT_NAME@_FIND_VERSION VERSION_LESS 1.0.0))
