Change install path for headers

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -111,7 +111,7 @@ install(TARGETS ${LIBRARY_NAME} ${EXECUTABLE_NAME}
 )
 
 install(
-  DIRECTORY ${VLOG_PARSER_INCLUDE_BUILD_DIR}
+  DIRECTORY ${VLOG_PARSER_INCLUDE_BUILD_DIR}/verilogparser
   DESTINATION ${VLOG_PARSER_INCLUDE_INSTALL_DIR}
 )
 
