Add uninstall target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,25 @@ if(${VLOG_PARSER_EXPORT_PACKAGE})
 endif()
 
 
+# ---------------------------------------------------------------------------- #
+# UNINSTALL
+# uninstall files listed in install_manifest.txt
+# ---------------------------------------------------------------------------- #
+if(NOT TARGET uninstall)
+  configure_file(
+    "${CMAKE_CURRENT_SOURCE_DIR}/cmake/cmake_uninstall.cmake.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/cmake/cmake_uninstall.cmake"
+    IMMEDIATE @ONLY
+  )
+
+  add_custom_target(uninstall
+    COMMAND 
+      ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake/cmake_uninstall.cmake
+  )
+
+endif()
+
+
 # ------------------------------------------------------------------------
 
 if(${VLOG_PARSER_BUILD_DOCS})
