--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -48,6 +48,7 @@ add_custom_command(
   ARGS -y ${SOURCE_DIR}/${BISON_INPUT} -o ${BINARY_DIR}/${BISON_OUTPUT}
   OUTPUT ${BINARY_DIR}/${BISON_OUTPUT}
   WORKING_DIRECTORY ${SOURCE_DIR} #/${BISON_INPUT}
+  DEPENDS ${SOURCE_DIR}/${BISON_INPUT}
 )
 
 add_custom_command(
@@ -55,7 +56,7 @@ add_custom_command(
   ARGS -o ${BINARY_DIR}/${FLEX_OUTPUT} ${SOURCE_DIR}/${FLEX_INPUT}
   OUTPUT ${BINARY_DIR}/${FLEX_OUTPUT}
   WORKING_DIRECTORY ${SOURCE_DIR} #/${FLEX_INPUT}
-  DEPENDS ${BINARY_DIR}/${BISON_OUTPUT}
+  DEPENDS ${BINARY_DIR}/${BISON_OUTPUT} ${SOURCE_DIR}/${FLEX_INPUT}
 )
 
 SET_SOURCE_FILES_PROPERTIES(${BINARY_DIR}/${FLEX_OUTPUT}  GENERATED)
